--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,6 +25,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: '.'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.'
+          # This ensures hidden files are included
+          include-hidden-files: true 
+
